# Thalassa

./: .dockerignore  .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  API_examples.ipynb  Dockerfile_  LICENSE  Makefile  README.md  Thalassa.ipynb  apt.txt  build.sh  config.yml  environment.yml  mkdocs.yml  poetry.toml  postBuild  pv  pyproject.toml  requirements.txt  run.py  run.sh  setup.cfg  thala.ipynb
.binder/: README  bokehserverextension.py  environment.yml  jupyter_notebook_config.py  panelserverextension.py  postBuild  start
.github/workflows/: run_tests.yml
binder/: README  environment.yml  jupyter_notebook_config.py  panelserverextension.py  postBuild  requirements.txt
docker/: Dockerfile  build.sh  docker-entrypoint.sh  entrypoint.sh  requirements.txt  run.sh
docs/: api.md  development.md  docs.yml  index.md  installation.md
notebooks/: API.ipynb  BBox_filtering.ipynb  Public API.ipynb  Public_API.ipynb  TELEMAC.ipynb
poseidon_viz/: Thalassa.ipynb  cli.py  main.py  panels.py  paths.py  utils.py
poseidon_viz/templates/: index.html
requirements/: requirements-dev.txt  requirements.txt
scripts/: bump
tests/: __init__.py  api_test.py  normalization_test.py  plotting_test.py  utils_test.py
tests/data/: iceland.slf
thalassa/: __init__.py  api.py  cli.py  main.py  normalization.py  panels.py  plotting.py  ui.py  utils.py  visuals.py  web_ui.py
