[tool.poetry]
name = "thalassa"
version = "0.3.0" # overwritten by poetry-dynamic-versioning plugin
description = ""
authors = ["Panos Mavrogiorgos <pmav99@gmail.com>"]
license = 'EUPL v1.2'
readme = "README.md"
repository = "https://github.com/ec-jrc/thalassa.git"
classifiers = [
    "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
    "Operating System :: OS Independent",
    "Development Status :: 4 - Beta",
    "Environment :: Other Environment",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: GIS",
    "Topic :: Scientific/Engineering :: Visualization",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]

[tool.poetry.dependencies]
python = ">=3.8"
bokeh = "*"
Cartopy = "*"
datashader = "*"
geopandas = "*"
geoviews = "*"
holoviews = "*"
hvplot = "*"
llvmlite = "*"
netCDF4 = "*"
pandas = "*"
panel = "*"
pygeos = "*"
"ruamel.yaml" = "*"
scipy = "*"
shapely = "*"
tornado = "*"
xarray = "*"

[tool.poetry.group.dev.dependencies]
covdefaults = "*"
mypy = ">=1"
pytest = "*"
pytest-cov = ">=3.0"
ipykernel = "*"

[tool.poetry-dynamic-versioning]
enable = true
dirty = true

[build-system]
# requires = [
#     "poetry-core>=1.0.0",
#     "poetry-dynamic-versioning",
# ]
# build-backend = "poetry_dynamic_versioning.backend"

requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 108
target-version = ['py38']

[tool.pytest.ini_options]
addopts = "-ra --verbose --showlocals --tb=short"
testpaths = ["tests"]
log_cli = true
filterwarnings = [
    'ignore:distutils Version classes are deprecated. Use packaging.version instead:DeprecationWarning',
    'ignore:Deprecated call to `pkg_resources.declare_namespace:DeprecationWarning',
]

[tool.mypy]
python_version = "3.8"
plugins = [
    "numpy.typing.mypy_plugin"
]
show_error_codes = true
show_column_numbers = true
show_error_context = true
warn_no_return = true
warn_redundant_casts = true
warn_return_any = true
warn_unreachable = true
warn_unused_ignores = true
strict = true
ignore_missing_imports = true

# mypy per-module options:
[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = true

[tool.ruff]
target-version = "py38"
line-length = 108
select = [
    "E",  # pycodestyle
    "F",  # pyflakes
    "C90",  # mccabe
    "COM",  # flake8-commas
]
ignore = [
    "E501", # line-too-long
]

[tool.coverage.run]
plugins = ["covdefaults"]
source = ["thalassa"]
concurrency = [
  "multiprocessing",
  "thread",
]
parallel = true
sigterm = true

[tool.coverage.report]
f-ail_under = 90
