[metadata]
name = thalassa
version = 0.1.0
author = Panos Mavrogiorgos, George Breyiannis
author_email = pmav99@gmail.com, George.BREYIANNIS@ec.europa.eu
description = Visualization of large scale results of hydrodynamic simulations
long_description = file: README.md
readme = README.md
url = https://github.com/yosoyjay/Thalassa
keywords = Hydrodynamic, Sea, Simulation, Visualization
classifiers =
    Development Status :: 4 - Beta
    Environment :: Console
    Intended Audience :: Developers
    Intended Audience :: End Users/Desktop
    Intended Audience :: Science/Research
    License :: OSI Approved :: European Union Public Licence 1.2 (EUPL 1.2)
    Operating System :: MacOS
    Operating System :: POSIX :: Linux
    Programming Language :: Python :: 3
    Topic :: Scientific/Engineering :: Atmospheric Science
    Topic :: Scientific/Engineering :: GIS
    Topic :: Scientific/Engineering :: Hydrology
    Topic :: Scientific/Engineering :: Visualization

[options]
zip_safe = False
packages = find:
python_requires = >=3.8, <=3.9
install_requires =
    pyproj
    bokeh
    hvplot
    datashader
    geoviews
    matplotlib
    xarray
    pandas
    zarr
    typer
    bash_kernel
    noaa-coops

[options.entry_points]
console_scripts =
    thalassa = thalassa.cli:app

[options.package_data]
thalassa = static/*, templates/*
